--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/osprey"]
 	path = themes/osprey
 	url = https://github.com/tomanistor/osprey.git
+[submodule "public"]
+	path = public
+	url = https://github.com/xdbsoft/xdbsoft.github.io
+	branch = master
